clean up the code

--- a/mle_assignment_GMM.ipynb
+++ b/mle_assignment_GMM.ipynb
@@ -1095,11 +1095,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "884c19ab-1a0e-41e8-99a8-0d31670d174a",
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "de3888b8-fd37-43a9-a591-b244d2764a3e",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Load dataset and initialize Transformer"
+    "extreme_values = pd.DataFrame([[0], [1e10]], columns=[\"Amount\"])"
    ]
   },
   {
@@ -1288,9 +1290,6 @@
     }
    ],
    "source": [
-    "# Define extreme values for testing\n",
-    "extreme_values = pd.DataFrame([[0], [1e10]], columns=[\"Amount\"])\n",
-    "\n",
     "# Measure the time for transforming extreme values\n",
     "start_time = time.time()\n",
     "transformed_extreme_values = transformer.transform(extreme_values.values)\n",
